:bug: Fix z-index in dropdown-content

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -40,7 +40,6 @@
         background-color: #f9f9f9;
         width: 11rem;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
     }
     .dropdown-content a {
         color: black;
@@ -188,6 +187,7 @@
         flex-direction: column;
         background-color: rgb(229, 229, 229);
         position: absolute;
+        z-index: 9;
         top: 80px;
         width: 100%;
         left: 0;
@@ -216,6 +216,8 @@
         width: 100%;
         border: none;
         text-align: center;
+        position: absolute;
+        z-index: 10;
     }
     .dropdown-content a {
         border: 0.1px solid black;
